--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,9 @@ header, footer{
     color: black;
 }
 
+.keyskills h2{
+    color: #AD86BC;
+}
 /*------------------------------------------------------------------------Job Title*/
 h1{
     font-family: "Romanesco", sans-serif;
@@ -38,6 +41,10 @@ h1{
 
 
 /*------------------------------------------------------------------------------About Me*/
+#aboutMe{
+    min-height: 750px;
+}
+
 .aboutme{
     margin-top: 20px;
     margin-bottom: 20px;
@@ -78,7 +85,24 @@ h1{
     font-size: 25px;
 }
 
+/*---------------------------------------------------------------------------Key Skills*/
+#keyskills{
+    min-height: 500px;
+}
 
+#keyskills h2{
+    text-decoration: underline;
+    font-family: "Romanesco", sans-serif;
+    font-size: 70px;
+}
+
+.html img, .css img, .javascript img, .seo img, .analytics img, .social-media img{
+    width: 200px;
+    height: 150px;
+    margin-top: 10px;
+    padding: 10px;
+    position: relative;
+}
 /*------------------------------------------------------------------------------Footer*/
 .linkedIn{
     height: 75px;
